adds final histogram for labels and node properties
